# admin-app

./: .env  .env.development  .gitignore  Cargo.toml  database.db  package.json  pnpm-lock.yaml  vite.config.ts
server/: Cargo.toml
server/entity/: Cargo.toml
server/entity/src/: mod.rs  permission.rs  prelude.rs  role.rs  role_permissions.rs  user.rs  user_roles.rs
server/migration/src/: lib.rs  m20220101_000001_create_table.rs
server/src/: main.rs
server/src/controllers/: mod.rs  permission_controller.rs  role_controller.rs  users_controller.rs
server/src/helpers/: api_result.rs  db_helper.rs  dev_helper.rs  mod.rs
server/src/middleware/: auth.rs
server/src/models/: mod.rs  permission_model.rs  role_model.rs  users_model.rs
server/src/routers/: mod.rs  permission_router.rs  role_router.rs  user_router.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/login/types/: login.ts
src/store/modules/: user.ts
src/utils/: service.ts
src/views/login/: index.vue
